--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>A FOOTER AZ NAGYON JÓ</p>
+    <p style="text-align: center;">A FOOTER AZ NAGYON JÓ</p>
 </body>
 </html>
