--- a/header.html
+++ b/header.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>A HEADER AZ NAGYON JÓ</p>
+    <p style="text-align: center;">A HEADER AZ NAGYON JÓ</p>
 </body>
 </html>
