--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>A NAV AZ NAGYON JÓ</p>
+    <p style="text-align: center;">A NAV AZ NAGYON JÓ</p>
 </body>
 </html>
