--- a/div.html
+++ b/div.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>A DIV AZ NAGYON JÓ</p>
+    <p style="text-align: center;">A DIV AZ NAGYON JÓ</p>
 </body>
 </html>
